@@ -14,7 +14,7 @@
     <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MultiFunction</RootNamespace>
+    <RootNamespace>Com.Christoc.MultiFunction</RootNamespace>
     <AssemblyName>MultiFunction</AssemblyName>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <SccProjectName>SAK</SccProjectName>
@@ -99,6 +99,9 @@
       <DependentUpon>Edit.ascx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SkinBase.cs">
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
     <Compile Include="TwoColumn.ascx.cs">
       <DependentUpon>TwoColumn.ascx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
