@@ -1,6 +1,6 @@
 ﻿<dotnetnuke type="Package" version="5.0">
   <packages>
-    <package name="DotNetNuke.MultiFunction.Skin" type="Skin" version="01.00.01">
+    <package name="DotNetNuke.MultiFunction.Skin" type="Skin" version="01.01.00">
       <friendlyName>MultiFunction</friendlyName>
       <description>A DotNetNuke Skin using a common web layout with customizable CSS and PSDs.</description>
       <owner>
@@ -12,7 +12,7 @@
       <license src="license.txt"></license>
       <releaseNotes src="releasenotes.txt"></releaseNotes>
       <dependencies>
-        <dependency type="CoreVersion">06.00.00</dependency>
+        <dependency type="CoreVersion">06.00.02</dependency>
       </dependencies>
       <components>
         <component type="ResourceFile">
@@ -49,7 +49,7 @@
         </component>
       </components>
     </package>
-    <package name="DotNetNuke.MultiFunction.Container" type="Container" version="01.00.01">
+    <package name="DotNetNuke.MultiFunction.Container" type="Container" version="01.01.00">
       <friendlyName>MultiFunction</friendlyName>
       <description>A DotNetNuke Skin using a common web layout with customizable CSS and PSDs.</description>
       <owner>
@@ -61,7 +61,7 @@
       <license src="license.txt"></license>
       <releaseNotes src="releasenotes.txt"></releaseNotes>
       <dependencies>
-        <dependency type="CoreVersion">06.00.00</dependency>
+        <dependency type="CoreVersion">06.00.02</dependency>
       </dependencies>
       <components>
         <component type="Container">
