@@ -1,4 +1,4 @@
-﻿<h3>Multifunction 01.00.01</h3>
+﻿<h3>Multifunction 01.01.00</h3>
 <p class="Contributor">
     Chris Hammond <br />
     <a href="mailto:skins@christoc.com">skins@christoc.com</a><br />
@@ -7,6 +7,17 @@
 <hr/>
 <div class="License">
     <h3>About the MultiFunction Skin and Container Package</h3>
+
+    <p class="Owner">
+        <b>Version 01.01.00</b><br /><br />
+    </p>
+    <p>
+		<ul>
+			<li>Includes OrangeBox jQuery plugin for lightbox effects. <a href="http://multifunction.codeplex.com/wikipage?title=Lightbox%20Documentation&referringTitle=Documentation">See Documentation for Use</a></li>
+			<li>Configured for DotNetNuke 6.0.2+ only</li>
+		</ul>
+	</p>
+
 
     <p class="Owner">
         <b>Version 01.00.01</b><br /><br />
